Make sure newsletter-response is visible

--- a/wp-content/themes/citylimits/less/newsletters.less
+++ b/wp-content/themes/citylimits/less/newsletters.less
@@ -304,38 +304,15 @@
 				}
 			}
 			.newsletter-response {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background-color: @black;
-				.column.signup_text_holder {
-					margin-top: 4px;
-					width: 51.354838709677419%;
-					padding-left: 13.806451612903226%;
-					.signup_intro {
-						margin-left: 35%;
-						margin-top: 14px;
-						p {
-							font-size: 14px;
-						}
-					}
+				margin: @measure 0;
+				p {
+					font-size: 20px;
+					line-height: 1.2em;
+					margin-bottom: 11px;
 				}
-				.column.newsletter-response-content {
-					width: 45.032258064516129%;
-					border-left: 1px solid #3c3b36;
-					margin-top: 56px;
-					text-align: center;
-					p {
-						font-size: 20px;
-						line-height: 1.2em;
-						margin-bottom: 11px;
-					}
-					h3 {
-						text-transform: uppercase;
-						font-size: 38px;
-					}
+				h3 {
+					text-transform: uppercase;
+					font-size: 38px;
 				}
 			}
 		}
